Dont want to lose

--- a/index.html
+++ b/index.html
@@ -9,19 +9,33 @@
   <body>
       <header>
         <h1>My Sandbox</h1>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </nav>
       </header>
-      <section>
-        <aside>
-          <p>
-            Something something something something something
-          </p>
-        </aside>
-        <article>
-          <p class="main">
-            stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff
-          </p>
-        </article>
-      </section>
+      <div class="main-wrap">
+        <section class="main-section">
+          <aside>
+            <p>
+              Something something something something something
+            </p>
+          </aside>
+          <article>
+            <p class="main">
+              stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff
+            </p>
+          </article>
+        </section>
+      </div>
+      <div class="sec-wrap">
+        <section class="secondary-section">
+              <p class="main">
+                stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff   stuff
+              </p>
+        </section>
     <footer>
       <p class="footer"><s>&copy;Copyright ALYSSA!</s> Steal these things?</p>
     </footer>
